Updated as per PR comments.

--- a/notebooks/integrations/llama3/rag-elastic-llama3-elser.ipynb
+++ b/notebooks/integrations/llama3/rag-elastic-llama3-elser.ipynb
@@ -5,7 +5,7 @@
    "id": "430bd0198f228af0",
    "metadata": {},
    "source": [
-    "# RAG with Elastic ELSER and Llama3\n",
+    "# RAG with Elastic ELSER and Llama3 using Langchain\n",
     "\n",
     "This interactive notebook uses `Langchain` to process fictional workplace documents and uses `ELSER v2` running in `Elasticsearch` to transform these documents into embeddings and store them into `Elasticsearch`. We then ask a question, retrieve the relevant documents from `Elasticsearch` and use `Llama3` running locally using `Ollama` to provide a response. \n",
     "\n",
@@ -49,10 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install langchain\n",
-    "!pip install langchain-elasticsearch\n",
-    "!pip install langchain-community\n",
-    "!pip install tiktoken`"
+    "!pip install langchain langchain-elasticsearch langchain-community tiktoken"
    ]
   },
   {
@@ -61,31 +58,7 @@
    "metadata": {},
    "source": [
     "## Import packages\n",
-    "Next we import the required packages."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51c420640a6b2a43",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-04T11:35:55.141217Z",
-     "start_time": "2024-06-04T11:35:54.635980Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from langchain_community.llms import Ollama\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain.schema.output_parser import StrOutputParser\n",
-    "from langchain.schema.runnable import RunnablePassthrough\n",
-    "from langchain_elasticsearch import ElasticsearchStore\n",
-    "from langchain_elasticsearch import SparseVectorStrategy\n",
-    "from getpass import getpass\n",
-    "from urllib.request import urlopen\n",
-    "import json"
+    "Next we import the required packages as required. The imports are placed in the cells as required."
    ]
   },
   {
@@ -109,6 +82,8 @@
    },
    "outputs": [],
    "source": [
+    "from getpass import getpass\n",
+    "\n",
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
     "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "\n",
@@ -137,6 +112,11 @@
    },
    "outputs": [],
    "source": [
+    "from urllib.request import urlopen\n",
+    "import json\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "\n",
+    "\n",
     "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/datasets/workplace-documents.json\"\n",
     "\n",
     "response = urlopen(url)\n",
@@ -184,6 +164,9 @@
    },
    "outputs": [],
    "source": [
+    "from langchain_elasticsearch import ElasticsearchStore\n",
+    "from langchain_elasticsearch import SparseVectorStrategy\n",
+    "\n",
     "es_vector_store = ElasticsearchStore(\n",
     "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
     "    es_api_key=ELASTIC_API_KEY,\n",
@@ -235,6 +218,8 @@
    },
    "outputs": [],
    "source": [
+    "from langchain_community.llms import Ollama\n",
+    "\n",
     "llm = Ollama(model=\"llama3\")"
    ]
   },
@@ -257,6 +242,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.schema.output_parser import StrOutputParser\n",
+    "from langchain.schema.runnable import RunnablePassthrough\n",
+    "\n",
+    "\n",
     "def format_docs(docs):\n",
     "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
     "\n",
