--- a/notebooks/integrations/llama3/rag-elastic-llama3.ipynb
+++ b/notebooks/integrations/llama3/rag-elastic-llama3.ipynb
@@ -5,7 +5,7 @@
    "id": "aaea04cfd3f16454",
    "metadata": {},
    "source": [
-    "# RAG with Elastic and Llama3\n",
+    "# RAG with Elastic and Llama3 using Llamaindex\n",
     "\n",
     "This interactive notebook uses `Llamaindex` to process fictional workplace documents and uses `Llama3` running locally using `Ollama` to transform these documents into embeddings and store them into `Elasticsearch`. We then ask a question, retrieve the relevant documents from `Elasticsearch` and use `Llama3` to provide a response. \n",
     "\n",
@@ -50,17 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install llama-index\n",
-    "!pip install llama-index-cli\n",
-    "!pip install llama-index-core\n",
-    "!pip install llama-index-embeddings-elasticsearch\n",
-    "!pip install llama-index-embeddings-ollama\n",
-    "!pip install llama-index-legacy\n",
-    "!pip install llama-index-llms-ollama\n",
-    "!pip install llama-index-readers-elasticsearch\n",
-    "!pip install llama-index-readers-file\n",
-    "!pip install llama-index-vector-stores-elasticsearch\n",
-    "!pip install llamaindex-py-client"
+    "!pip install llama-index llama-index-cli llama-index-core llama-index-embeddings-elasticsearch llama-index-embeddings-ollama llama-index-legacy llama-index-llms-ollama llama-index-readers-elasticsearch llama-index-readers-file llama-index-vector-stores-elasticsearch llamaindex-py-client"
    ]
   },
   {
@@ -69,31 +59,7 @@
    "metadata": {},
    "source": [
     "## Import packages\n",
-    "Next we import the required packages."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "34918747fcd940e2",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-04T16:39:30.235081Z",
-     "start_time": "2024-06-04T16:39:30.232159Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from llama_index.core.node_parser import SentenceSplitter\n",
-    "from llama_index.core.ingestion import IngestionPipeline\n",
-    "from llama_index.embeddings.ollama import OllamaEmbedding\n",
-    "from llama_index.vector_stores.elasticsearch import ElasticsearchStore\n",
-    "from llama_index.core import VectorStoreIndex, QueryBundle\n",
-    "from llama_index.llms.ollama import Ollama\n",
-    "from llama_index.core import Document, Settings\n",
-    "from getpass import getpass\n",
-    "from urllib.request import urlopen\n",
-    "import json"
+    "Next we import the required packages as required. The imports are placed in the cells as required."
    ]
   },
   {
@@ -117,6 +83,9 @@
    },
    "outputs": [],
    "source": [
+    "from getpass import getpass\n",
+    "\n",
+    "\n",
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
     "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "\n",
@@ -145,6 +114,10 @@
    },
    "outputs": [],
    "source": [
+    "import json\n",
+    "from urllib.request import urlopen\n",
+    "from llama_index.core import Document\n",
+    "\n",
     "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/datasets/workplace-documents.json\"\n",
     "\n",
     "response = urlopen(url)\n",
@@ -185,6 +158,11 @@
    },
    "outputs": [],
    "source": [
+    "from llama_index.core.node_parser import SentenceSplitter\n",
+    "from llama_index.core.ingestion import IngestionPipeline\n",
+    "from llama_index.embeddings.ollama import OllamaEmbedding\n",
+    "from llama_index.vector_stores.elasticsearch import ElasticsearchStore\n",
+    "\n",
     "es_vector_store = ElasticsearchStore(\n",
     "    index_name=\"workplace_index\",\n",
     "    vector_field=\"content_vector\",\n",
@@ -210,7 +188,7 @@
    "id": "4b343865fcd1a742",
    "metadata": {},
    "source": [
-    "## Execute pipeline, \n",
+    "## Execute pipeline \n",
     "This will chunk the data, generate embeddings using `Llama3` and ingest into `Elasticsearch` index, with embeddings in a `dense` vector field."
    ]
   },
@@ -250,6 +228,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from llama_index.llms.ollama import Ollama\n",
+    "from llama_index.core import Settings\n",
+    "\n",
     "Settings.embed_model = ollama_embedding\n",
     "local_llm = Ollama(model=\"llama3\")"
    ]
@@ -270,6 +251,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from llama_index.core import VectorStoreIndex, QueryBundle\n",
+    "\n",
     "index = VectorStoreIndex.from_vector_store(es_vector_store)\n",
     "query_engine = index.as_query_engine(local_llm, similarity_top_k=10)\n",
     "\n",
