Semantic text notebook development

--- a/notebooks/search/09-semantic-text.ipynb
+++ b/notebooks/search/09-semantic-text.ipynb
@@ -15,7 +15,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Requirements\n",
+    "## Requirements\n",
     "\n",
     "For this example, you will need:\n",
     "\n",
@@ -32,9 +32,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Create Elastic Cloud deployment\n",
+    "## Create Elastic Cloud deployment\n",
     "\n",
-    "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial."
+    "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
+    "\n",
+    "TODO: Instruct user to disable ML node autoscaling?"
    ],
    "metadata": {
     "collapsed": false
@@ -44,7 +46,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Install packages and connect with Elasticsearch Client\n",
+    "## Install packages and connect with Elasticsearch Client\n",
     "\n",
     "To get started, we'll need to connect to our Elastic deployment using the Python client (version 8.15.0 or above).\n",
     "Because we're using an Elastic Cloud deployment, we'll use the **Cloud ID** to identify our deployment.\n",
@@ -87,11 +89,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from elasticsearch import Elasticsearch, helpers, exceptions\n",
+    "from elasticsearch import Elasticsearch\n",
     "from urllib.request import urlopen\n",
     "from getpass import getpass\n",
-    "import json\n",
-    "import time"
+    "import json"
    ],
    "metadata": {
     "collapsed": false
@@ -196,6 +197,287 @@
     "collapsed": false
    },
    "id": "59e2223bf2c4331"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Create the Inference Endpoint\n",
+    "\n",
+    "Let's create the inference endpoint by using the [Create inference API](https://www.elastic.co/guide/en/elasticsearch/reference/current/put-inference-api.html).\n",
+    "\n",
+    "For this example we'll use the [ELSER service](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-elser.html), but the inference API also supports [many other inference services](https://www.elastic.co/guide/en/elasticsearch/reference/current/put-inference-api.html#put-inference-api-desc).\n",
+    "\n",
+    "TODO: How to handle timeouts?"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "22fa643780acd44a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "client.inference.put_model(\n",
+    "    task_type=\"sparse_embedding\",\n",
+    "    inference_id=\"my-elser-endpoint\",\n",
+    "    body={\n",
+    "        \"service\": \"elser\",\n",
+    "        \"service_settings\": {\n",
+    "            \"num_allocations\": 1,\n",
+    "            \"num_threads\": 1\n",
+    "        }\n",
+    "    },\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8ee2188ea71324f5"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Create the Index\n",
+    "\n",
+    "Now we need to create an index with a `semantic_text` field. Let's create one that enables us to perform semantic search on movie plots."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "818f7a72a83b5776"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "client.indices.delete(index=\"semantic-text-movies\", ignore_unavailable=True)\n",
+    "client.indices.create(\n",
+    "    index=\"semantic-text-movies\",\n",
+    "    mappings={\n",
+    "        \"properties\": {\n",
+    "            \"title\": {\n",
+    "                \"type\": \"text\"\n",
+    "            },\n",
+    "            \"genre\": {\n",
+    "                \"type\": \"text\"\n",
+    "            },\n",
+    "            \"plot\": {\n",
+    "                \"type\": \"text\",\n",
+    "                \"copy_to\": \"plot_semantic\"\n",
+    "            },\n",
+    "            \"plot_semantic\": {\n",
+    "                \"type\": \"semantic_text\",\n",
+    "                \"inference_id\": \"my-elser-endpoint\"\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ace87760606f67c6"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Notice how we configured the mappings. We defined `plot_semantic` as a `semantic_text` field.\n",
+    "The `inference_id` parameter defines the inference endpoint that is used to generate the embeddings for the field.\n",
+    "Then we configured the `plot` field to [copy its value](https://www.elastic.co/guide/en/elasticsearch/reference/current/copy-to.html) to the `plot_semantic` field."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "abc3ee7a1fddfa9b"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Populate the Index\n",
+    "\n",
+    "Let's populate the index with our example dataset of 12 movies."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2b5a46b60660a489"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/notebooks/search/movies.json\"\n",
+    "response = urlopen(url)\n",
+    "movies = json.loads(response.read())\n",
+    "\n",
+    "operations = []\n",
+    "for movie in movies:\n",
+    "    operations.append({\"index\": {\"_index\": \"semantic-text-movies\"}})\n",
+    "    operations.append(movie)\n",
+    "client.bulk(index=\"semantic-text-movies\", operations=operations, refresh=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "24f0133923553d28"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Semantic Search\n",
+    "\n",
+    "Now that our index is populated, we can query it using semantic search.\n",
+    "\n",
+    "### Aside: Pretty printing Elasticsearch search results\n",
+    "\n",
+    "Your `search` API calls will return hard-to-read nested JSON.\n",
+    "We'll create a little function called `pretty_search_response` to return nice, human-readable outputs from our examples."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6fff5932fcbac1b0"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def pretty_search_response(response):\n",
+    "    if len(response[\"hits\"][\"hits\"]) == 0:\n",
+    "        print(\"Your search returned no results.\")\n",
+    "    else:\n",
+    "        for hit in response[\"hits\"][\"hits\"]:\n",
+    "            id = hit[\"_id\"]\n",
+    "            score = hit[\"_score\"]\n",
+    "            title = hit[\"_source\"][\"title\"]\n",
+    "            runtime = hit[\"_source\"][\"runtime\"]\n",
+    "            plot = hit[\"_source\"][\"plot\"]\n",
+    "            keyScene = hit[\"_source\"][\"keyScene\"]\n",
+    "            genre = hit[\"_source\"][\"genre\"]\n",
+    "            released = hit[\"_source\"][\"released\"]\n",
+    "            \n",
+    "            pretty_output = f\"\\nID: {id}\\nScore: {score}\\nTitle: {title}\\nRuntime: {runtime}\\nPlot: {plot}\\nKey Scene: {keyScene}\\nGenre: {genre}\\nReleased: {released}\"\n",
+    "            \n",
+    "            print(pretty_output)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ad417b4b3f50c889"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Semantic Search with the `semantic` Query\n",
+    "\n",
+    "We can use the `semantic` query to quickly & easily query the `semantic_text` field in our index.\n",
+    "Under the hood, an embedding is automatically generated for our query text using the `semantic_text` field's inference endpoint.\n",
+    "\n",
+    "TODO: Add link to `semantic` query documentation"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "22c4d4d395adb472"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "response = client.search(\n",
+    "    index=\"semantic-text-movies\",\n",
+    "    query={\n",
+    "        \"semantic\": {\n",
+    "            \"field\": \"plot_semantic\",\n",
+    "            \"query\": \"organized crime movies\"\n",
+    "        }\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "pretty_search_response(response)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1a8520ffc8a3efb3"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "These results demonstrate the power of semantic search.\n",
+    "Our top results are all movies involving organized crime, even if the exact term \"organized crime\" doesn't appear in the plot description.\n",
+    "This works because the ELSER model understands the semantic similarity between terms like \"organized crime\" and \"mob\".\n",
+    "\n",
+    "However, these results also show the weaknesses of semantic search.\n",
+    "Because semantic search is based on vector similarity, there is a long tail of results that are weakly related to our query vector.\n",
+    "That's why movies like _The Matrix_ are returned towards the tail end of our search results."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "148fda24a3964aa9"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Hybrid Search with the `semantic` Query\n",
+    "\n",
+    "We can address some of the issues with pure semantic search by combining it with lexical search techniques.\n",
+    "Here, we use a [boolean query](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-bool-query.html) to require that all matches contain at least term from the query text, in either the `plot` or `genre` fields."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7c9bab225a745746"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "response = client.search(\n",
+    "    index=\"semantic-text-movies\",\n",
+    "    query={\n",
+    "        \"bool\": {\n",
+    "            \"must\": {\n",
+    "                \"multi_match\": {\n",
+    "                    \"fields\": [\"plot\", \"genre\"],\n",
+    "                    \"query\": \"organized crime movies\"\n",
+    "                }\n",
+    "            },\n",
+    "            \"should\": {\n",
+    "                \"semantic\": {\n",
+    "                    \"field\": \"plot_semantic\",\n",
+    "                    \"query\": \"organized crime movies\"\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "pretty_search_response(response)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4f72f7906b918dc1"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "These results demonstrate that the application of lexical search techniques can help focus the results, while retaining many of the advantages of semantic search.\n",
+    "In this example, the top search results are all still movies involving organized crime, but the `multi_match` query keeps the long tail focused on movies in the crime genre."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d50d10ced4389107"
   }
  ],
  "metadata": {
