Semantic text notebook development

--- a/notebooks/search/09-semantic-text.ipynb
+++ b/notebooks/search/09-semantic-text.ipynb
@@ -5,6 +5,8 @@
    "source": [
     "# Semantic Search with Semantic Text\n",
     "\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/Mikep86/elasticsearch-labs/blob/main/notebooks/search/09-semantic-text.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+    "\n",
     "Learn how to use the [semantic_text](https://www.elastic.co/guide/en/elasticsearch/reference/current/semantic-text.html) field type to quickly get started with semantic search."
    ],
    "metadata": {
@@ -472,12 +474,25 @@
    "cell_type": "markdown",
    "source": [
     "These results demonstrate that the application of lexical search techniques can help focus the results, while retaining many of the advantages of semantic search.\n",
-    "In this example, the top search results are all still movies involving organized crime, but the `multi_match` query keeps the long tail focused on movies in the crime genre."
+    "In this example, the top search results are all still movies involving organized crime, but the `multi_match` query keeps the long tail shorter and focused on movies in the crime genre."
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "d50d10ced4389107"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "The [semantic_text](https://www.elastic.co/guide/en/elasticsearch/reference/current/semantic-text.html) field type is a powerful tool that can help you quickly and easily integrate semantic search.\n",
+    "It can greatly improve the relevancy of your search results, particularly when combined with lexical search techniques."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "78be304240d6c695"
   }
  ],
  "metadata": {
