Handle when the inference endpoint does not exist

--- a/notebooks/search/09-semantic-text.ipynb
+++ b/notebooks/search/09-semantic-text.ipynb
@@ -91,7 +91,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from elasticsearch import Elasticsearch\n",
+    "from elasticsearch import Elasticsearch, exceptions\n",
     "from urllib.request import urlopen\n",
     "from getpass import getpass\n",
     "import json"
@@ -221,6 +221,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "try:\n",
+    "    client.inference.delete_model(\n",
+    "        inference_id=\"my-elser-endpoint\"\n",
+    "    )\n",
+    "except exceptions.NotFoundError:\n",
+    "    # Inference endpoint does not exist\n",
+    "    pass\n",
+    "    \n",
     "client.inference.put_model(\n",
     "    task_type=\"sparse_embedding\",\n",
     "    inference_id=\"my-elser-endpoint\",\n",
