Added note about how to handle timeouts

--- a/notebooks/search/09-semantic-text.ipynb
+++ b/notebooks/search/09-semantic-text.ipynb
@@ -209,7 +209,7 @@
     "\n",
     "For this example we'll use the [ELSER service](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-elser.html), but the inference API also supports [many other inference services](https://www.elastic.co/guide/en/elasticsearch/reference/current/put-inference-api.html#put-inference-api-desc).\n",
     "\n",
-    "TODO: How to handle timeouts?"
+    "NOTE: If the inference creation request times out, wait a moment and try again"
    ],
    "metadata": {
     "collapsed": false
