--- a/notebooks/search/09-semantic-text.ipynb
+++ b/notebooks/search/09-semantic-text.ipynb
@@ -222,22 +222,17 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    client.inference.delete_model(\n",
-    "        inference_id=\"my-elser-endpoint\"\n",
-    "    )\n",
+    "    client.inference.delete_model(inference_id=\"my-elser-endpoint\")\n",
     "except exceptions.NotFoundError:\n",
     "    # Inference endpoint does not exist\n",
     "    pass\n",
-    "    \n",
+    "\n",
     "client.inference.put_model(\n",
     "    task_type=\"sparse_embedding\",\n",
     "    inference_id=\"my-elser-endpoint\",\n",
     "    body={\n",
     "        \"service\": \"elser\",\n",
-    "        \"service_settings\": {\n",
-    "            \"num_allocations\": 1,\n",
-    "            \"num_threads\": 1\n",
-    "        }\n",
+    "        \"service_settings\": {\"num_allocations\": 1, \"num_threads\": 1},\n",
     "    },\n",
     ")"
    ],
@@ -268,22 +263,15 @@
     "    index=\"semantic-text-movies\",\n",
     "    mappings={\n",
     "        \"properties\": {\n",
-    "            \"title\": {\n",
-    "                \"type\": \"text\"\n",
-    "            },\n",
-    "            \"genre\": {\n",
-    "                \"type\": \"text\"\n",
-    "            },\n",
-    "            \"plot\": {\n",
-    "                \"type\": \"text\",\n",
-    "                \"copy_to\": \"plot_semantic\"\n",
-    "            },\n",
+    "            \"title\": {\"type\": \"text\"},\n",
+    "            \"genre\": {\"type\": \"text\"},\n",
+    "            \"plot\": {\"type\": \"text\", \"copy_to\": \"plot_semantic\"},\n",
     "            \"plot_semantic\": {\n",
     "                \"type\": \"semantic_text\",\n",
-    "                \"inference_id\": \"my-elser-endpoint\"\n",
-    "            }\n",
+    "                \"inference_id\": \"my-elser-endpoint\",\n",
+    "            },\n",
     "        }\n",
-    "    }\n",
+    "    },\n",
     ")"
    ],
    "metadata": {
@@ -370,9 +358,9 @@
     "            keyScene = hit[\"_source\"][\"keyScene\"]\n",
     "            genre = hit[\"_source\"][\"genre\"]\n",
     "            released = hit[\"_source\"][\"released\"]\n",
-    "            \n",
+    "\n",
     "            pretty_output = f\"\\nID: {id}\\nScore: {score}\\nTitle: {title}\\nRuntime: {runtime}\\nPlot: {plot}\\nKey Scene: {keyScene}\\nGenre: {genre}\\nReleased: {released}\"\n",
-    "            \n",
+    "\n",
     "            print(pretty_output)"
    ],
    "metadata": {
@@ -402,12 +390,7 @@
    "source": [
     "response = client.search(\n",
     "    index=\"semantic-text-movies\",\n",
-    "    query={\n",
-    "        \"semantic\": {\n",
-    "            \"field\": \"plot_semantic\",\n",
-    "            \"query\": \"organized crime movies\"\n",
-    "        }\n",
-    "    }\n",
+    "    query={\"semantic\": {\"field\": \"plot_semantic\", \"query\": \"organized crime movies\"}},\n",
     ")\n",
     "\n",
     "pretty_search_response(response)"
@@ -458,17 +441,17 @@
     "            \"must\": {\n",
     "                \"multi_match\": {\n",
     "                    \"fields\": [\"plot\", \"genre\"],\n",
-    "                    \"query\": \"organized crime movies\"\n",
+    "                    \"query\": \"organized crime movies\",\n",
     "                }\n",
     "            },\n",
     "            \"should\": {\n",
     "                \"semantic\": {\n",
     "                    \"field\": \"plot_semantic\",\n",
-    "                    \"query\": \"organized crime movies\"\n",
+    "                    \"query\": \"organized crime movies\",\n",
     "                }\n",
-    "            }\n",
+    "            },\n",
     "        }\n",
-    "    }\n",
+    "    },\n",
     ")\n",
     "\n",
     "pretty_search_response(response)"
