[DOCS] Fixes inference ID in Cohere-ES notebook.

--- a/notebooks/integrations/cohere/cohere-elasticsearch.ipynb
+++ b/notebooks/integrations/cohere/cohere-elasticsearch.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "client.inference.put_model(\n",
     "    task_type=\"text_embedding\",\n",
-    "    inference_id=\"cohere_embeddings1\",\n",
+    "    inference_id=\"cohere_embeddings\",\n",
     "    body={\n",
     "        \"service\": \"cohere\",\n",
     "        \"service_settings\": {\n",
