--- a/notebooks/document-chunking/with-langchain-splitters.ipynb
+++ b/notebooks/document-chunking/with-langchain-splitters.ipynb
@@ -12,7 +12,13 @@
     "This interactive notebook will:\n",
     "- load the model \"sentence-transformers__all-minilm-l6-v2\" from Hugging Face and into Elasticsearch ML Node\n",
     "- Use LangChain splitters to chunk the passages into sentences and index them into Elasticsearch with nested dense vector\n",
-    "- perform a search and return docs with the most relevant passages"
+    "- perform a search and return docs with the most relevant passages\n",
+    "\n",
+    "# Prefer the `semantic_text` field type\n",
+    "\n",
+    "**Elasticsearch version 8.14 introduced the [`semantic_text`](https://www.elastic.co/guide/en/elasticsearch/reference/master/semantic-text.html) field type which handles the chunking process behind the scenes. Before continuing with this notebook, we highly recommend looking into this:**\n",
+    "\n",
+    "**<https://www.elastic.co/search-labs/blog/semantic-search-simplified-semantic-text>**"
    ]
   },
   {
