Add link to semantic query documentation

--- a/notebooks/search/09-semantic-text.ipynb
+++ b/notebooks/search/09-semantic-text.ipynb
@@ -373,10 +373,8 @@
    "source": [
     "### Semantic Search with the `semantic` Query\n",
     "\n",
-    "We can use the `semantic` query to quickly & easily query the `semantic_text` field in our index.\n",
-    "Under the hood, an embedding is automatically generated for our query text using the `semantic_text` field's inference endpoint.\n",
-    "\n",
-    "TODO: Add link to `semantic` query documentation"
+    "We can use the [`semantic` query](https://www.elastic.co/guide/en/elasticsearch/reference/master/query-dsl-semantic-query.html) to quickly & easily query the `semantic_text` field in our index.\n",
+    "Under the hood, an embedding is automatically generated for our query text using the `semantic_text` field's inference endpoint."
    ],
    "metadata": {
     "collapsed": false
