--- a/notebooks/search/09-semantic-text.ipynb
+++ b/notebooks/search/09-semantic-text.ipynb
@@ -24,7 +24,7 @@
     "- An Elastic deployment:\n",
     "  - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
     "\n",
-    "- Elasticsearch 8.15 or above, or Elasticsearch serverless"
+    "- Elasticsearch 8.15 or above, or [Elasticsearch serverless](https://www.elastic.co/elasticsearch/serverless)"
    ],
    "metadata": {
     "collapsed": false
@@ -230,6 +230,7 @@
     "client.inference.put_model(\n",
     "    task_type=\"sparse_embedding\",\n",
     "    inference_id=\"my-elser-endpoint\",\n",
+    "    request_timeout=60,\n",
     "    body={\n",
     "        \"service\": \"elser\",\n",
     "        \"service_settings\": {\"num_allocations\": 1, \"num_threads\": 1},\n",
