Use Elasticsearch.options

--- a/notebooks/search/09-semantic-text.ipynb
+++ b/notebooks/search/09-semantic-text.ipynb
@@ -227,10 +227,9 @@
     "    # Inference endpoint does not exist\n",
     "    pass\n",
     "\n",
-    "client.inference.put_model(\n",
+    "client.options(request_timeout=60).inference.put_model(\n",
     "    task_type=\"sparse_embedding\",\n",
     "    inference_id=\"my-elser-endpoint\",\n",
-    "    request_timeout=60,\n",
     "    body={\n",
     "        \"service\": \"elser\",\n",
     "        \"service_settings\": {\"num_allocations\": 1, \"num_threads\": 1},\n",
