--- a/notebooks/search/09-semantic-text.ipynb
+++ b/notebooks/search/09-semantic-text.ipynb
@@ -225,7 +225,9 @@
     "    pass\n",
     "\n",
     "try:\n",
-    "    client.options(request_timeout=60, max_retries=3, retry_on_timeout=True).inference.put_model(\n",
+    "    client.options(\n",
+    "        request_timeout=60, max_retries=3, retry_on_timeout=True\n",
+    "    ).inference.put_model(\n",
     "        task_type=\"sparse_embedding\",\n",
     "        inference_id=\"my-elser-endpoint\",\n",
     "        body={\n",
@@ -238,7 +240,7 @@
     "    if e.error == \"resource_already_exists_exception\":\n",
     "        print(\"Inference endpoint created successfully\")\n",
     "    else:\n",
-    "        raise e\n"
+    "        raise e"
    ],
    "metadata": {
     "collapsed": false
@@ -275,7 +277,7 @@
     "    if deployment_stats is None:\n",
     "        print(\"ELSER Model is currently being deployed.\")\n",
     "        continue\n",
-    "    \n",
+    "\n",
     "    nodes = deployment_stats.get(\"nodes\")\n",
     "    if nodes is not None and len(nodes) > 0:\n",
     "        print(\"ELSER Model has been successfully deployed.\")\n",
